candle-einops-macros/tests/ui/fail/einsum-duplicate-output.stderr
error: duplicate einsum output label `row`
 --> tests/ui/fail/einsum-duplicate-output.rs:4:21
  |
4 |     let _ = einsum!("row column -> row row", ());
  |                     ^^^^^^^^^^^^^^^^^^^^^^^
